visaid_builder/visaid_ingredients/visaid_embedded_styles.css
html {
    font-size: 16px;
}
body {
    font-family: "Noto Sans", "Roboto", "Liberation Sans", sans-serif; 
    font-size: 0.8rem;
    color: black;
    background-color: #f3f3f3;
    margin: 0;
    padding-top: 126px;
}
div.top {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 118px;
    font-size: 1.2rem;
    padding: 4px 10px 0px 10px;
    background-color: white;
    white-space: nowrap;      
    overflow-x: hidden;
    overflow-y: auto;         
    text-overflow: ellipsis; 
}
span.extra-info {
    font-family: "Noto Sans Mono", "Roboto Mono", "Liberation Mono", "Cascadia Mono", "Consolas", monospace; 
    font-size: 0.8rem;
    color: #5e5d5e ; 
}
div.checkbox-container {
    display: flex;
    gap: 10px;
    background-color: #d9d7db;
    padding-top: 2px;
    padding-bottom: 2px;
    overflow-x: auto;
}
button {
    font-size: 0.8rem;
    margin-right: 6px;    
}
.button-row,
.checkbox-row {
    height: 21px;
    font-size: 0.8rem;
    padding: 4px 0px 4px 4px;
}
div.button-row {
    padding: 4px 0px 2px 4px;
}
span.checkbox-leader {
    display: inline-block;
    width: 100px;
    font-weight: 600;
    white-space: nowrap;
}
input[type="checkbox"] {
    accent-color: #bababa;
}
.checkboxes label {
    background-color: #f3f3f3;
    color: #5e5d5e;
    padding: 4px 7px 2px 2px; 
    border-radius: 5px;
    border: 1px solid #bababa;
    margin: 0px 3px 0px 0px;
}
.btn-ui {
    background-color: #f3f3f3;
    color: #5e5d5e;
    padding: 2px 10px 2px 10px; 
    border: 2px solid #bababa;
    border-radius: 12px;
    margin-right: 16px;
}
pre.metadata {
    font-family: "Noto Sans Mono", "Roboto Mono", "Liberation Mono", "Cascadia Mono", "Consolas", monospace; 
    font-size: 0.7rem;
}
div.container {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    padding: 4px 10px 0px 10px;
}
div.item {
    font-family: "Noto Sans Mono", "Roboto Mono", "Liberation Mono", "Cascadia Mono", "Consolas", monospace; 
    font-size: 0.75rem;
    background-color: #bababa;
    padding: 4px 8px 3px 10px;
    border-radius: 8px 8px 8px 8px;
    box-shadow: 2px 2px 2px 0 #858585,
                -1px -1px 1px 0 #e2e2e2;
    break-inside: avoid;
}
div.subsample {
    background-color: #c5d4e2;
    color: #5d81a1;
    box-shadow: 2px 2px 2px 0 #b1b2b3,
                -1px -1px 1px 0 #e2e2e2;
}
div.unsample {
    background-color: #d9d7db;
    color: #a3a3a3;
    box-shadow: 2px 2px 2px 0 #e2e2e2,
                -1px -1px 1px 0 #e2e2e2;
}
div.unsample span.img-caption {
    color: #a3a3a3;
}
div.img-caption {
    font-family: "Noto Sans", "Roboto", "Liberation Sans", sans-serif; 
    font-size: 0.5rem;
    color: #858585; 
    padding: 2px;
    padding-bottom: 0px;
    text-align: center;
}
img {
    display: block;
    height: 180px;
    border: 2px solid black;
    margin-top: 2px;
}
div.version {
    font-size: 0.7rem;
    padding: 12px;
}
span.video-id {
    font-family: "Noto Sans Mono", "Roboto Mono", "Liberation Mono", "Cascadia Mono", "Consolas", monospace; 
    color:  #6d57db;
}
span.identifier {
    font-family: "Noto Sans Mono", "Roboto Mono", "Liberation Mono", "Cascadia Mono", "Consolas", monospace; 
}
span.label {
    font-family: "Noto Sans", "Roboto", "Liberation Sans", sans-serif; 
    font-size: 0.8rem;
}
a {
    color: inherit;
}
.hidden {
    display: none;
}
@media print {
    div.top {
        position: static;
    }
    body {
        padding-top: 0;
    }
}

